# vtt-innovation-duplication

./: .gitignore  README.md  data_extractor.py  embedding_generator.py  embeddings.pkl  environment.yml  evaluate_clustering.py  fuzzy_deduplicator.py  introduction_data.ipynb  main.ipynb  openai-results.txt  openaiembedding.ipynb  pyproject.toml  thresholds.pkl  thresholds_group.pkl  viz.py  vtt_innovation_network.html
